# courseware_openai_agents

./: .gitignore  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
check_documents/: ssg-api-calls-9d65ee02e639.json
courseware_agents/: assessment_agent.py  brochure_agent.py  courseware_agent.py  document_agent.py
docs/: index.html
docs/content/: core-features.md  usage-guide.md
generate_ap_fg_lg_lp/: courseware_generation.py
generate_ap_fg_lg_lp/utils/: agentic_AP.py  agentic_FG.py  agentic_LG.py  agentic_LP.py  organization_utils.py  timetable_generator.py
generate_assessment/: assessment_generation.py
generate_assessment/utils/: openai_agentic_CS.py  openai_agentic_PP.py  openai_agentic_SAQ.py
generate_cp/: app.py  main.py
settings/: admin_auth.py  api_database.py  api_manager.py  model_configs.py  settings.py
utils/: prompt_loader.py
